# mini-spec

./: .markdownlint-cli2.jsonc  AGENTS.md  BLOGPOST.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MINISPEC.md  README.md  SUPPORT.md  WHY-MINI-SPEC.md  pyproject.toml
.claude/commands/: minispec.analyze.md  minispec.checklist.md  minispec.constitution.md  minispec.design.md  minispec.import.md  minispec.next.md  minispec.status.md  minispec.tasks.md  minispec.validate-docs.md  minispec.walkthrough.md
.github/: CODEOWNERS
.github/workflows/: release.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.ps1  create-release-packages.sh  generate-release-notes.sh
docs/plans/: 2026-03-06-minispec-upgrade.md
hooks/: README.md  hooks.yaml
hooks/adapters/: aider.md  claude-code.json  cursor.md  generic.md
hooks/scripts/: adr-prompt.sh  block-force.sh  claude-block-force.sh  claude-doc-update-prompt.sh  claude-protect-main.sh  claude-secrets-scan.sh  confirm-delete.sh  doc-staleness.sh  pre-push.sh  protect-main.sh  secrets-scan.sh  workflow-gate.sh
memory/: constitution.md
scripts/: test-local.sh
scripts/bash/: common.sh  create-new-feature.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
src/minispec_cli/: __init__.py
templates/: vscode-settings.json
templates/commands/: analyze.md  checklist.md  constitution.md  design.md  import.md  next.md  status.md  tasks.md  validate-docs.md  walkthrough.md
tests/: test_upgrade.py
(+2 files in other folders)
