[project]
name = "minispec-cli"
version = "0.5.1"
description = "MiniSpec CLI - Pair programming workflow for AI-assisted development. Small chunks, continuous review, mental models that stick."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
    "pyyaml>=6.0",
]

[project.scripts]
minispec = "minispec_cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minispec_cli"]

